--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "peerjs": "^1.4.7",
+    "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -36,7 +39,7 @@
     ]
   },
   "devDependencies": {
-    "raw-loader": "^4.0.2",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "raw-loader": "^4.0.2"
   }
 }
