--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "flow-recipe",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "/flow-recipe",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
