--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flow-recipe",
   "version": "0.1.0",
   "private": false,
-  "homepage": "/flow-recipe",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
