--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "peerjs": "^1.4.7",
     "qrcode.react": "^3.1.0",
+    "ramda": "^0.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-force-graph": "^1.43.0",
     "react-scripts": "5.0.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.2"
