--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# database
+/server/database.sqlite
+/server/database.sqlite-journal
+
+packages/client/node_modules
