--- a/package.json
+++ b/package.json
@@ -1,55 +1,18 @@
 {
   "name": "flow-recipe",
   "version": "0.1.0",
-  "private": false,
   "homepage": ".",
-  "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "peerjs": "^1.4.7",
-    "qrcode.react": "^3.1.0",
-    "ramda": "^0.29.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-force-graph": "^1.43.0",
-    "react-scripts": "5.0.0",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.2"
-  },
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "server:watch": "yarn workspace server watch",
+    "client:start": "yarn workspace client start",
+    "dev": "concurrently \"yarn server:watch\" \"yarn client:start\""
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "prettier": "^2.5.1",
-    "raw-loader": "^4.0.2"
-  }
+    "concurrently": "^8.2.2",
+    "prettier": "^2.5.1"
+  },
+  "private": true,
+  "workspaces": [
+    "packages/**"
+  ]
 }
