--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,6 +20,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-force-graph-2d": "^1.29.0",
+        "react-router-dom": "^6.0.0",
         "react-scripts": "5.0.0",
         "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
